--- a/Test/style.css
+++ b/Test/style.css
@@ -2,8 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
@@ -14,148 +12,18 @@ body {
     background-color: #121212;
     display: flex;
 }
-
-.navbar {
-    width: 35%;
-    height: 100vh;
-    background-color: #161616;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    transition: width 0.3s;
-}
-
-.navbar.collapsed {
-    width: 100px;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.logo svg {
-    width: 45px;
-    height: 45px;
-}
-
-.navbar-title {
-    font-size: 16px;
-    margin-left: 10px;
-    font-weight: 700;
-}
-
-.navbar.collapsed .navbar-title {
-    display: none;
-}
-
-.nav-links {
+main {
     width: 100%;
-    padding: 0;
-}
-
-.nav-link {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding: 15px 20px;
-    color: #d4d4d4;
-    text-decoration: none;
-    transition: 0.2s ease-in-out;
-    margin-left: 30px;
-    border-radius: 5px;
-}
-
-.nav-link:hover {
-    background-color: #333;
-    width: 75%;
-}
-
-.nav-link .icon {
-    width: 20px;
-    height: 20px;
-}
-
-.nav-link span {
-    margin-left: 15px;
-}
-
-.navbar.collapsed .nav-link {
-    margin-left: -1px;
-}
-
-.navbar.collapsed .nav-link span {
-    display: none;
-}
-
-.navbar.collapsed .nav-link .icon {
     margin: 0 auto;
+    padding: 0 20px;
 }
 
-.navbar.collapsed .nav-link:hover {
-    width: 100%;
-}
-
-.collapse-btn {
-    background: none;
-    border: none;
-    color: #d4d4d4;
-    font-size: 20px;
-    margin: 20px 0;
-    margin-top: 80px;
-    cursor: pointer;
-    transition: 0.3s ease-in-out;
-}
-
-.navbar.collapsed .collapse-btn {
-    transform: rotate(180deg)
-        scale(0.8);
-}
-
-.footer_navbar {
-    margin-top: auto;
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-.toggle-mode {
-    background: none;
-    border: none;
-    color: #d4d4d4;
+.cards {
     display: flex;
-    align-items: center;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.auth-buttons {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-.login,
-.register {
-    background: none;
-    border: 1px solid #d4d4d4;
-    color: #d4d4d4;
-    padding: 5px 10px;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.register {
-    border-color: #00ff00;
-    color: #00ff00;
-}
-
-.navbar.collapsed .toggle-mode span,
-.navbar.collapsed .auth-buttons {
-    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
 }
 
 .carousel {
