--- a/Test/style.css
+++ b/Test/style.css
@@ -8,10 +8,11 @@
 
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #121212;
     display: flex;
 }
+
 main {
     width: 100%;
     margin: 0 auto;
@@ -23,4 +24,11 @@ main {
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
+}
+
+.sales {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
 }
