--- a/Test/style.css
+++ b/Test/style.css
@@ -2,6 +2,34 @@
 @import"../styles/global.css";
 
 .cards {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.cards h1 {
+    font-size: 26px;
+    margin-top: 40px;
+    margin-left: 90px;
+}
+
+.cards h1 a {
+    color: var(--lightGreen);
+    text-decoration: none;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.cards h1 a:hover {
+    color: var(--darkGreen);
+}
+
+.cards hr {
+    width: 80%;
+    margin-left: 130px;
+    margin-top: 10px;
+}
+
+.top_sales {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -16,11 +44,27 @@
     padding: 20px;
 }
 
+.banners {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.banners img {
+    width: 45%;
+    cursor: pointer;
+}
+
 .cards-carousel {
     display: flex;
     overflow: hidden;
     width: 100%;
     position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .cards-carousel-inner {
@@ -29,7 +73,7 @@
 }
 
 .cards-carousel .card-component {
-    min-width: 200px; /* Ajuste conforme necessário */
+    min-width: 200px; 
     margin: 0 10px;
 }
 
