--- a/styles/global.css
+++ b/styles/global.css
@@ -27,28 +27,5 @@ body {
 main {
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
-}
-
-/* Media Queries for responsiveness */
-@media (min-width: 600px) {
-    body {
-        flex-direction: row;
-    }
-
-    main {
-        width: 80%;
-    }
-}
-
-@media (min-width: 768px) {
-    main {
-        width: 70%;
-    }
-}
-
-@media (min-width: 1024px) {
-    main {
-        width: 60%;
-    }
+    color: var(--white);
 }
