--- a/styles/category.css
+++ b/styles/category.css
@@ -1,5 +1,38 @@
 @import "../styles/global.css";
 
+header {
+    text-align: right;
+    margin-top: -20px;
+    position: relative;
+}
+
+header div {
+    margin-right: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: absolute;
+    top: 35%;
+    left: 80%;
+}
+
+header div h1 {
+    font-size: 3.5rem;
+    font-weight: 400;
+    margin-top: 10px;
+}
+
+header div hr {
+    width: 300%;
+    margin-left: -400px;
+    margin-top: 10px;
+}
+
+header img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -36,4 +69,35 @@
     background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
     padding: 5px; /* Espaçamento ao redor do texto */
     border-radius: 0.25rem;
+}
+
+.top_sales {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.search-bar {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.search-bar input {
+    padding: 10px;
+    width: 300px;
+    border: 2px solid var(--lightGreen);
+    color: var(--white);
+    border-radius: 0.25rem;
+    background: rgba(0, 0, 0, 0.1);
+    transition: 0.3s ease-in-out;
+}
+
+.search-bar input:focus {
+    outline: none;
+    border: 2px solid var(--darkGreen);
+    transform: scale(1.1);
 }
