--- a/styles/exclusive.css
+++ b/styles/exclusive.css
@@ -41,6 +41,10 @@ header {
     line-height: 1.5;
 }
 
+section {
+    margin-top: 40px;
+}
+
 section h1 {
     font-size: 26px;
     margin-top: 40px;
@@ -98,3 +102,18 @@ section hr {
     text-align: left
 }
 
+.most_sales {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 200px;
+    margin-top: 20px;
+}
+
+.top_sales {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
