--- a/styles/about.css
+++ b/styles/about.css
@@ -1,1 +1,124 @@
 @import"../styles/global.css";
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+
+.banners {
+    background-image: url("../images/Group 16.png");
+    width: 100%;
+    height: 300px;
+    justify-content: left;
+}
+
+.banners div {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 50%;
+    height: 100%;
+    padding-left: 40px;
+}
+
+.banners div h2 {
+    color: white;
+    font-size: 15px;
+    font-family: var(--Silkscreen);
+    font-weight: 700;
+    padding-top: 100px;
+    padding-left: 50px;
+    text-align: center;
+}
+
+.objective {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    width: 90%;
+    margin: 20px 100px;
+    padding: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.objective h2 {
+    font-size: 22px;
+    font-family: var(--Silkscreen);
+    color: var(--lightGreen);
+}
+
+.objective-content {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.objective-content p {
+    font-size: 18px;
+    width: 90%;
+    padding: 10px;
+    margin-left: 20px;
+    color: var(--white);
+}
+
+.objective-images {
+    display: flex;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+.objective-images .image-large {
+    width: 300px;
+    height: 300px;
+    background: #333;
+    border-radius: 8px;
+}
+
+.objective-images .image-small-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.objective-images .image-small {
+    width: 92px;
+    height: 92px;
+    background: #444;
+    border-radius: 8px;
+}
+
+.about h2 {
+    font-size: 26px;
+    font-family: var(--Silkscreen);
+    color: var(--lightGreen);
+    margin-top: 40px;
+    padding: 10px;
+    text-align: center;
+}
+
+.about hr {
+    width: 80%;
+    margin-left: 130px;
+    margin-top: 10px;
+    border: 1px solid var(--lightGreen);
+}
+
+.about img {
+    width: 225px;
+    height: 300px;
+    border-radius: 8px;
+}
+
+.about-content {
+    width: 70%;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.about-content p {
+    font-size: 18px;
+    color: var(--white);
+    text-align: justify;
+}
+
+.social-media {
+    flex-direction: flex-end;
+}
