--- a/styles/about.css
+++ b/styles/about.css
@@ -82,6 +82,11 @@
     border-radius: 8px;
 }
 
+.about {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
 .about h2 {
     font-size: 26px;
     font-family: var(--Silkscreen);
@@ -120,5 +125,98 @@
 }
 
 .social-media {
-    flex-direction: flex-end;
+    display: flex;
+    gap: 5px;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+
+.map {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    margin: 20px;
+    width: 90%;
+    height: 400px;
+    margin-left: 100px;
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+iframe {
+    width: 50%;
+    height: 350px;
+    border-radius: 10px;
+    border: none;
+}
+
+.map form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 40%;
+    height: 100%;
+}
+
+.map form h2 {
+    font-size: 22px;
+    font-family: var(--Silkscreen);
+    color: var(--lightGreen);
+}
+
+.map form label {
+    font-size: 18px;
+    color: var(--white);
+}
+
+.map form input {
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid var(--lightGreen);
+    background: rgba(0, 0, 0, 0.5);
+    color: var(--white);
+    font-size: 16px;
+    transition: 0.2s ease-in-out;
+}
+
+.map form input:focus {
+    outline: none;
+    transform: scale(1.02);
+    border: 1px solid var(--lightGreen);
+}
+
+.map form textarea {
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    background: rgba(0, 0, 0, 0.5);
+    border: 1px solid var(--lightGreen);
+    color: var(--white);
+    font-size: 16px;
+    transition: 0.2s ease-in-out;
+}
+
+.map form textarea:focus {
+    outline: none;
+    transform: scale(1.02);
+    border: 1px solid var(--lightGreen);
+}
+
+.map form button {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--lightGreen);
+    color: var(--white);
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.map form button:hover {
+    background-color: var(--darkGreen);
 }
