--- a/styles/global.css
+++ b/styles/global.css
@@ -55,7 +55,7 @@ main {
     padding: 10px;
     width: 300px;
     border: 2px solid var(--lightGreen);
-    color: var(--white);
+    color: var(--lightGreen);
     border-radius: 0.25rem;
     background: rgba(0, 0, 0, 0.1);
     transition: 0.3s ease-in-out;
