--- a/styles/exclusive.css
+++ b/styles/exclusive.css
@@ -32,7 +32,7 @@ header {
     padding: 15px;
     text-align: center;
     background: rgba(0, 0, 0, 0.5);
-    color: white;
+    color: var(--white);
     z-index: 1;
 }
 
@@ -99,15 +99,14 @@ section hr {
 .highlights div p {
     font-weight: bold;
     width: 100%;
-    text-align: left
+    text-align: left;
+    color: var(--text-color);
 }
 
 .most_sales {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 200px;
-    margin-top: 20px;
+    width: 100%;
+    display: grid;
+    place-items: center;
 }
 
 .top_sales {
