Enhance responsiveness across multiple components including Footer, Mostseller, Navbar, and various stylesheets; implement media queries for improved layout on smaller screens

--- a/styles/about.css
+++ b/styles/about.css
@@ -276,3 +276,71 @@ iframe {
 .map form button:hover {
     background-color: var(--darkGreen);
 }
+
+/* Estilo para responsividade em dispositivos menores */
+@media (max-width: 768px) {
+    .banners {
+        background: none;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .banners div {
+        background: none;
+        width: 100%;
+        height: 200px;
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    .banners div h2 {
+        color: var(--textColor);
+        padding: 0;
+        font-size: 20px;
+        padding-top: 70px;
+        padding-left: 0;
+    }
+
+    .objective {
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    .objective-content {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    .about hr {
+        margin: 0 auto;
+    }
+
+    .about-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .map {
+        margin-left: 0;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+    iframe {
+        width: 100%;
+        height: 300px;
+    }
+
+    .map form {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .map form h2 {
+        text-align: center;
+    }
+}
