--- a/styles/category.css
+++ b/styles/category.css
@@ -79,3 +79,25 @@ header img {
     gap: 10px;
     margin-top: 20px;
 }
+
+/* Estilo para responsividade em dispositivos menores */
+@media (max-width: 768px) {
+    header div hr {
+        width: 50%;
+        margin-left: 300px;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .category-card {
+        width: 90%;
+    }
+
+    .category-card img {
+        width: 100%;
+    }
+    
+}
